# grammatical-inferences

./: .gitignore  .gitlab-ci.yml  1stResults.txt  CMakeLists.txt  ChordMapping  Grammar.cpp  Grammar.h  GrammaticalInferences-config.cmake.in  InputWords.cpp  InputWords.h  LICENSE  README.md  ResLargAlphabet  Rule.cpp  Rule.h  Symbol.cpp  Symbol.h  build.yml  executeExperiment.txt  main.cpp  pybinding.cpp  resultsContext.txt
.github/workflows/: build.yml
bindings/: CMakeLists.txt  pybinding.cpp
cmake/: FindFilesystem.cmake
data_sets/: 3.0equals1.train
examples/: InputWords.cpp  InputWords.h  main.cpp
pybind11/tools/: FindCatch.cmake
resources/: Spice 4 - Conclusões do super duper p inference  grammar_super_duper_p_inference
resources/McGill-Billboard/: music_words.txt  part_music_words.txt
resources/SPiCe_Offline/train/: ._1.spice.train  16.spice.train  17.spice.train  18.spice.train  20.spice.train  21.spice.train  21_completo_.spice.train  22.spice.train  24.spice.train  25.spice.train  26.spice._bkptrain  26.spice.train  27.spice.train  28.spice.train  30.spice.train  31.spice.train  32.spice.train  33.spice.train  34.spice.train  35.spice.train  36.spice.train  37.spice.train  38.spice.train  41.spice.train  42.spice.train  43.spice.train  44.spice.train  45.spice.train  46.spice.train  47.spice.train  48.spice.train  49.spice.train  50.spice.train  51.spice.train  99.spice.train  set_of_words_to_debug.txt
resources/outputPautomacPumping/: sol4  sol48
results/: 0_0.05_0.5_10_10800_10000_14_20.txt  0_0.05_0.5_10_10800_10000_14_20_s.txt  0_0.05_0.5_10_10800_10000_14_20_ss.txt  0_0.05_0.5_10_10800_10000_16_99.txt  0_0.05_0.5_10_10800_10000_16_99_ss.txt  0_0.05_0.5_10_10800_10000_18_28.txt  0_0.05_0.5_10_10800_10000_18_28_ss.txt  0_0.05_0.5_10_10800_10000_6_20.txt  0_0.05_0.5_10_10800_10000_6_20_ss.txt  0_0.5_0.5_10_10800_10000_14_20_s.txt  0_0.5_0.5_10_10800_10000_14_20_ss.txt  0_0.5_0.5_10_10800_10000_16_99.txt  0_0.5_0.5_10_10800_10000_16_99_ss.txt  0_0.5_0.5_10_10800_10000_18_28.txt  0_0.5_0.5_10_10800_10000_18_28_ss.txt  0_0.5_0.5_10_10800_10000_6_20_s.txt  0_0.5_0.5_10_10800_10000_6_20_ss.txt  0_1.5_0.5_10_10800_10000_14_20_s.txt  0_1.5_0.5_10_10800_10000_14_20_ss.txt  0_1.5_0.5_10_10800_10000_16_99.txt  0_1.5_0.5_10_10800_10000_16_99_ss.txt  0_1.5_0.5_10_10800_10000_18_28.txt  0_1.5_0.5_10_10800_10000_18_28_ss.txt  0_1.5_0.5_10_10800_10000_6_20_s.txt  0_1.5_0.5_10_10800_10000_6_20_ss.txt  1_0.05_0.05_10_10800_10000_14_20.txt  1_0.05_0.05_10_10800_10000_16_99.txt  1_0.05_0.05_10_10800_10000_18_28.txt  1_0.05_0.05_10_10800_10000_6_20.txt  1_0.05_0.2_10_10800_10000_14_20.txt  1_0.05_0.2_10_10800_10000_16_99.txt  1_0.05_0.2_10_10800_10000_18_28.txt  1_0.05_0.2_10_10800_10000_6_20.txt  1_0.05_0.5_10_10800_10000_14_20.txt  1_0.05_0.5_10_10800_10000_16_99.txt  1_0.05_0.5_10_10800_10000_18_28.txt  1_0.05_0.5_10_10800_10000_6_20.txt  1_0.5_0.05_10_10800_10000_14_20.txt  1_0.5_0.05_10_10800_10000_16_99.txt  1_0.5_0.05_10_10800_10000_18_28.txt  (+49 more)
source/: CMakeLists.txt  Grammar.cpp  Grammar.h  InputWords.cpp  InputWords.h  Rule.cpp  Rule.h  Symbol.cpp  Symbol.h  main.cpp
source/gInfer/: Grammar.cpp  Grammar.h  Rule.cpp  Rule.h  Symbol.cpp  Symbol.h
test/: CMakeLists.txt  main.cpp  testGrammar.cpp
